force-app/main/default/objects/CGD_Bank_Guarantee__c/CGD_Bank_Guarantee__c.object-meta.xml
<CustomObject>
    <description>CGD保證金</description>
    <label>Bank Guarantee</label>
    <nameField>
        <label>Bank Guarantee Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Guarantees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>