force-app/main/default/objects/CGD_Bank_Guarantee__c/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <description>帳戶名稱</description>
    <inlineHelpText>帳戶名稱</inlineHelpText>
    <label>Account Code</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bank Guarantees</relationshipLabel>
    <relationshipName>Bank_Guarantees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>