force-app/main/default/objects/CGD_Bank_Guarantee__c/fields/Bank_Guarantee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bank_Guarantee_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>金額</description>
    <label>Bank Guarantee Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>