force-app/main/default/objects/CGD_Bank_Guarantee__c/fields/Bank_Guarantee_Currency__c.field-meta.xml
<CustomField>
    <fullName>Bank_Guarantee_Currency__c</fullName>
    <description>幣別</description>
    <label>Bank Guarantee Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CGD_Currency</valueSetName>
    </valueSet>
</CustomField>