force-app/main/default/objects/CGD_Bank_Guarantee__c/fields/Bank_Guarantee_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_Guarantee_End_Date__c</fullName>
    <description>到期日</description>
    <label>Bank Guarantee End Date</label>
    <type>Date</type>
</CustomField>