force-app/main/default/objects/CGD_Bank_Guarantee__c/fields/Bank_Guarantee_Remark__c.field-meta.xml
<CustomField>
    <fullName>Bank_Guarantee_Remark__c</fullName>
    <description>說明</description>
    <label>Bank Guarantee Remark</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>