force-app/main/default/objects/CGD_Bank_Guarantee__c/fields/Bank_Guarantee_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_Guarantee_Start_Date__c</fullName>
    <description>起始日</description>
    <label>Bank Guarantee Start Date</label>
    <type>Date</type>
</CustomField>