force-app/main/default/objects/CGD_Bank_Guarantee__c/fields/Bank_Guarantee_Type__c.field-meta.xml
<CustomField>
    <fullName>Bank_Guarantee_Type__c</fullName>
    <description>類別</description>
    <label>Bank Guarantee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bank Guarantee</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Certificate of Deposits</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Corporate Guarantee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>