force-app/main/default/objects/CGD_Bank_Guarantee__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule</label>
    <type>Checkbox</type>
</CustomField>