force-app/main/default/objects/CGD_Bank_Guarantee__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
  TODAY() &lt; Bank_Guarantee_Start_Date__c,
  IF(TEXT($User.LanguageLocaleKey) = &quot;zh_TW&quot;, &quot;未開始&quot;, &quot;Not Started&quot;),
  IF(
    TODAY() &lt;= Bank_Guarantee_End_Date__c,
    IF(TEXT($User.LanguageLocaleKey) = &quot;zh_TW&quot;, &quot;有效&quot;, &quot;Active&quot;),
    IF(TEXT($User.LanguageLocaleKey) = &quot;zh_TW&quot;, &quot;已過期&quot;, &quot;Expired&quot;)
  )
)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>