force-app/main/default/objects/CGD_Bank_Guarantee__c/validationRules/ckStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ckStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>Bank_Guarantee_Start_Date__c&gt;Bank_Guarantee_End_Date__c</errorConditionFormula>
    <errorDisplayField>Bank_Guarantee_Start_Date__c</errorDisplayField>
    <errorMessage>Start Date must be earlier than End Date.</errorMessage>
</ValidationRule>