force-app/main/default/objects/CGD_Bank_Guarantee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Code__c</columns>
    <columns>Bank_Guarantee_Type__c</columns>
    <columns>Bank_Guarantee_Start_Date__c</columns>
    <columns>Bank_Guarantee_End_Date__c</columns>
    <columns>Bank_Guarantee_Currency__c</columns>
    <columns>Bank_Guarantee_Amount__c</columns>
    <columns>Bank_Guarantee_Remark__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>